Nuevo git. Avances en marcos metodológico y teórico.

--- a/02-antecedentes.Rmd
+++ b/02-antecedentes.Rmd
@@ -7,10 +7,6 @@ El concepto de democracia delegativa fue acuñado por el sociólogo argentino Gu
 Bajo esta definición, Chile se ha tendido a tomar como un contraejemplo, destacando la fuerza de sus instituciones democráticas surgidas tras el fin de la Dictadura [@odonnell1994;@carlin2018]. Sin embargo, y como se ilustra en la tabla 1, en Chile la rendición de cuentas horizontal no es acompañada por una rendición de cuentas vertical, lo que se traduciría en una *Uprooted democracy* marcada por una profunda crisis de representatividad [@odonnell1994]. 
 
 ```{r, echo=F, message=F}
-library(knitr)
-library(dplyr)
-library(kableExtra)
-
 td <- c("Democracia Representativa",
                           "Democracia Delegativa",
                           "Democracia Desarraigada")
@@ -95,24 +91,53 @@ Las divergencias a este modelo observado en otras regiones del mundo, ha llevado
 
 [^1]: Y también, como así precisa Martuccelli, a las mujeres, las diversidades sexuales o las personas con discapacidad. 
 
-Abordar el fenómeno del individualismo desde la teoría de la individualización presenta la ventaja de que permite desembarazarse de esta conceptualización unívoca de individuo, así como de la ambigüedad y multiplicidad con que se define el colectivismo. Para ello, se propone una definición que permita conceptualizar el fenómeno para la sociedad chilena. De tal modo, se entenderá como individualismo a los modelos de representación de la vida social que definen el rol del individuo en la sociedad en función a 3 ejes: a) La legitimidad de la acción individual; b) Las (auto)concepciones del individuo; c) los valores e imperativos estructuralmente producidos en los procesos de individuación. 
+Abordar el fenómeno del individualismo desde la teoría de la individualización presenta la ventaja de que permite desembarazarse de esta conceptualización unívoca de individuo, así como de la ambigüedad y multiplicidad con que se define el colectivismo. Para ello, se propone una definición que permita conceptualizar el fenómeno para la sociedad chilena. 
 
-El modelo del individualismo institucional es uno pero, aunque muchas veces se entiende de esa forma, no es el único. 
-  - Martuccelli menciona varios
-  - Dentro de una misma sociedad pueden haber modelos difractarios:
-    - Por ejemplo, diferencias en el individualismo en Estados Unidos entre negros y blancos.
-    - El estudio de Mendez et al sobre el individualismo-colectivismo. 
-    - Pensar en el problema del familiarismo: Más que pensar si el familiarismo es una caracteristica del individualismo o del colectivismo, pensar que hay individualismos más familiaristas que otros. O, más bien, que definen de forma diversa la relación del individuo con sus familias. 
-    - Bajo este marco analítico, el colectivismo sería una a las modalidades de individualismo, en que la acción individual puede estar menos legitimada y los individuos suelen construyen su identidad al menos parcialmente en torno a la pertenencia a una colectividad. ¿Por qué esto es individualismo? Porque las colectivos son grupos de libre elección conformadas por individuos que buscan objetivos individuales a través de la acción colectiva [@arribas1999]. Bauman se refiere a esto a propósito de la individualización en las sociedades industriales que se dio de manera desigual entre clases que "diferían en la gama de identidades disponibles y en la facilidad de elegir entre ellas. Las persoans con menos recursos, y por tanto con menos elección, tenía que compensar esta carencia individual con la fuerza de los números, es decir, cerrando fiales y participando en acciones colectivas. Como ha dicho Claus Offe, la acción colectiva y orientada a la clase llegó a los que estaban en la parte baja de la escalas social de manera tan *natural* y *obvia* como llegaba a sus jefes y empresarios la búsqueda individual de las metas vitales" [@bauman2003, p. 23]
-    
-- PONER POR AHÍ: Aunque se manifiesta nivel individual, creo que sería incorrecto pensar que el individualismo es *simplemente* un rasgo de la personalidad. Es un fenómeno estructural y sociohistórico, ligado a procesos de individuación que son "destino, no una elección" [@bauman2003, p. 23]. A nivel personal se podría entender más bien como "una explicación que las personas se dan a sí mismas, generalmente *a posteriori*, para legitimar su comportamiento y el de los demás" [@arribas1999, p. 12]
-- Sin embargo, divergencias a este modelo son posibles de observar en:
-  - La baja legitimidad de la individualidad propia del individualismo comunitario en África, así como la ambigüedad respecto al individualismo en Chile.
-  - Las concepciones de individuo inseperables de sus relaciones sociales, ya sea bajo un signo ontológico, como en las sociedades asiáticas, o utilitaria (como se ha observado en Chile con el híper-actor relacional)
-  - Los procesos de individuación en que los individuos no se constituyen explícitamente por mandatos institucionales sino por las respuestas individualizadas frente a los desafíos de la vida social, como sería el caso del individualismo agéntico en América Latina. 
- 
-#### Agencia y Creencias: Legitimidad de la Individualidad
+Se entenderá como individualismo a los modelos de representación de la vida social que definen el rol del individuo en la sociedad. Bajo tales modelos, los individuos deben hacerse cargo de sus propias vidas en condiciones diversas de legitimidad de la acción individual, distintas representaciones culturales y autoconcepciones del individuo, y diferentes valores e imperativos estructuralmente producidos. 
 
-#### Identidad: (Auto)concepciones del individuo
+Bajo este marco analítico, el colectivismo podría entenderse como un conjunto de modalidades de individualismo propias de sociedades en que la acción individual puede estar menos legitimada o en que los individuos construyen su identidad en torno a la pertenencia a una colectividad. En ningún, del tal modo, sería incompatible con la idea de individualismo, pues estas colectividades son grupos de libre elección conformadas por individuos que persiguen objetivos individuales a través de la acción colectiva [@arribas1999; @moemeka1998]. Zygmunt Bauman teoriza en este sentido, argumentando que los movimientos de trabajadores durante los siglos XIX y XX son resultado de procesos de individualización desiguales en esas sociedades:
 
-#### Valores: Imperativos y formas de individuación
+> Las personas con menos recursos, y por tanto con menos elección, tenían que compensar esta carencia individual con la fuerza de los números, es decir, cerrando fiales y participando en acciones colectivas. Como ha dicho Claus Offe, la acción colectiva y orientada a la clase llegó a los que estaban en la parte baja de la escala social de manera tan *natural* y *obvia* como llegaba a sus jefes y empresarios la búsqueda individual de las metas vitales" [@bauman2003, p. 23].
+
+Ya en la argumentación de Bauman se puede divisar un punto clave en este marco analítico: El individualismo institucional es solo una modalidad entre varias, con divergencias y difracciones. El propio Martuccelli [-@martuccelli2018] esquematiza una descripción de diversas variantes de individualismo que serían propias de las sociedades africanas (el individualismo comunitario), asiáticas (el individualismo ontorrelacional) y latinoamericanas (el individualismo agéntico). Pero, más interesante aún es que permite aprehender las difracciones dentro de una misma sociedad, y que esto es así incluso en las sociedades industriales en que emergió el modelo del individualismo institucional: El individualismo de los burgueses no era el mismo que el individualismo de los obreros. 
+
+
+Las diferencias raciales en las escalas de individualismo-colectivismo en Estados Unidos [@oyserman2002; @komarraju2008] entregan evidencia empírica a esta forma de entender el constructo: Mientras entre europeos-estadounidenses no existe relación significativa entre individualismo y colectivismo, la asociación si es observable entre afroamericanos [@komarraju2008]. Se debe recordar, además, que ya en los años 80, en su clásico *Habits of the Hearts*, Robert Bellah y su equipo describían dos tradiciones de individualismo en los Estados Unidos. También en Chile, mediante un análisis de conglomerados a la escala de Triandis (que distingue entre individualismo-colectivismo vertical y horizontal), se lograron identificar 5 grupos (colectivistas independientes, colectivistas puros, colectivistas idiocéntricos, individualistas alocéntricos y renegados) [@rojas2008]. Pensar en distintas modalidades individualismo también permite dar una salida al problema del familiarismo identificado por Oyserman y colegas [-@oyserman2002] [^2]: No se trata de si el familiarismo es una característica propia del individualismo o del colectivismo, sino que hay individualismos que definen de forma diversa la relación del individuo con sus familias. 
+
+[^2]: La misma lógica puede aplicar al problema de la jerarquía y la competencia también identificada en ese estudio [@oyserman2002].
+
+En los párrafos que siguen, se dará -- brevemente -- algunas pequeñas precisiones sobre las dimensiones que se han identificado como componentes del fenómeno del individualismo:
+
+#### Legitimidad de la Individualidad
+
+Está dimensión se refiere a las creencias sobre la agencia de los individuos en el mundo social [@brewer2007], así como la valoración de la individualidad. Por individualidad aquí se entiende al "grado de diferenciación o de singularización reconocido o legítimamente alcanzado por un individuo dentro de un colectivo" [@martuccelli2018, p. 10].
+
+Bajo el modelo del individualismo institucional, la individualidad deja de ser una anomalía para pasar a ostentar altos niveles de legitimidad [@martuccelli2018]. Sin embargo, esto se vería tensionado, por ejemplo, por la acentuación de conductas individualizadas sin ruptura de lazos comunitarios en sociedad africanas -- Modelo que Martuccelli [-@martuccelli2018] denomina como indivudalismo comunitario. Más cercano a la realidad nacional, Araujo y Martuccelli constantan que la individualidad ha sido históricamente visto con sospecha en sociedades latinoamericanas [@araujo2020a]. 
+
+Ahora bien, se debe resaltar que el individualismo ha sido institucionalizado principalmente en 3 esferas: la económica, la política y la afectiva [@cortois2018; @martuccelli2018]. Esto se refleja en la existencia de 3 guiones para el individualismo institucional; en la esfera económica, un individualismo utilitario; en la política, un individualismo moral; y en la afectiva, un individualismo expresivo [@cortois2018]. Es importante hacer esta distinción, ya que en una misma sociedad pueden encontrtarse grupos e individuos que legitimen el individualismo en algunas esferas pero no en otras. Por ejemplo, en América del Norte se ha observado que grupos conservadores apoyan la determinación individual en la economía y en la elección de escuela, pero no en el derecho al aborto o a la eutanasia [@kemmelmeier2003].
+
+El individualismo utilitario es aquel que entiende al individuo como propietario de su vid y sus habilidades, las que son susceptibles a ser intercambiadas en el libre mercado. La acción se entiende aquí como estratégica, es decir, como medios para conseguir fines individuales. El otro, de tal modo, no tiene un valor intrínseco, sino como un medio parat tales fines [@cortois2018]. En Chile, este tipo de individualismo podría asociarse a la instauración del neoliberalismo y la emergencia de un *homo neoliberalis*, pincipalmente mediante el acceso al consumo [@araujo2012; @araujo2020a]. Su legitimidad, con todo, está lejos de ser univoca, como se puede observar en la relación ambigua de los chilenos frente al oportunismo [@araujo2014] y frente al consumismo [@araujo2012].
+
+El individualismo moral, en cambio, enfatiza la obligación moral de tratar al otro como un fin en sí mismo. La institucionalización de esta idea se puede observar en la declaraciones de derechos humanos, civiles y sociales, que reconocen a los individuos como iguales y autónomos [@cortois2018]. En América Latina, este tipo de individualismo ha se puede observar en la valorización de los derechos humanos tras las dictaduras del siglo XX [@araujo2020a]. En Chile, además, se podría observar en las aspiraciones por la democratización y horizontalización de lazo social, así como en las demandas por dignidad [@araujo2012].
+
+Si cada una de estas variantes introducidas se puede relacionar con las dos vertientes de la *doble revolución* descrita por Eric Hobsbawm, Eva Illouz [-@illouz2020] introduce una tercera que aconteció en el plano emocional y en la esfera privada. Se trata de un cambio cultural del que emerge el individualismo expresivo, en el que la acción social se entiende como un medio para la autoexpresión auténtica del yo [@cortois2018]. Opera, así, en el ámbito del amor, la sexualidad, la identidad, las intimidad y la familia. Se distingue del individualismo utilitario en que, pese a que ambos están dirigidos hacia el propio individuo, el individualismo expresivo carece del carácter instrumental y estratégico del utilitarismo. Aunque en ese sentido podría acercarse al individualismo moral, la diferencia fundamental es que mientras este pone énfasis en la igualdad entre individuos ("todos los humanos nacen libres e iguales"), el expresivo le da relieve a la diferencia (particularmente, en la autenticidad y unicidad).
+
+#### (Auto)concepciones del individuo
+
+Esta dimensión aborda las diversas concepciones en torno a la que se pueden definir a las que se pueden definir las identidades de los individuos, ya sea como uno prexistente a sus relaciones sociales -- como ocurre bajo el modelo del individualismo institucional --, o bien como parte de sus relaciones sociales o grupos a los que pertenece [@brewer2007; @martuccelli2018]. 
+
+Si bien la concepción de un individuo independiente se ha considerado como propio de las culturas individualistas [@benavides2020; @cross2011], tal idea ha sido problematizada teóricamente [@voronov2002] y empíricamente [@benavides2020; @kolstad2009]. Esto, junto a a la persistencia de los llamados valores asiáticos en esas sociedad, que conceptualizan al individuo como inseperable de sus lazos sociales [@zhai2022], y la conceptualización de un híper-actor relacional en la sociedad chilena [@araujo2020], sugiera la posibilidad de individualismos que difieren de las concepciones del individuo atomizado. 
+
+Así, además de las autoconcepciones independientes se podrían identificar, por un lado, concepciones relaciones y concepciones colectivas [@brewer2007]. En las primeras, la identidad del individuo se define por sus relaciones cercanas, tales como la familia o los amigos. En las segundas, en tanto, es la identificaciones con grupos sociales más abstractos -- esto es, grupos nacionales, regionales, étnicos o religiosos -- lo que define a la identidad individual [@brewer2007]
+
+#### Valores e Imperativos
+
+Esta dimensión se refiere a la importancia relativa que se le otorga en una sociedad a diversos valores e imperativos individuales y colectivos [@brewer2007], los cuales son producidos por procesos sociohistóricos de individuación [@martuccelli2018]. Bajo el individualismo institucional, el principal valor para el individuo es la autonomía [@martuccelli2010]. Esto se realiza mediante un entramado institucional [@martuccelli2018] que "formula amablemente a cada uno que se constituya a sí mismo en individuo, que planifique su vida, diseñe y obre y asuma la responsabilidad en caso de fracaso" [@robles2001, p. 59]. Es, pues, una individuación reflexiva bajo la que los individuos se constituyen bajo el imperativo de ejercer control sobre sus destinos y tomar decisiones de manera autónoma [@silvapalacios2015], de ahí que su imperativo principal sea "vive tu vida como quieras" [@robles2001]
+
+Sin embargo, también se han planteado visiones críticas a esta concepción, particularmente desde América Latina [@araujo2012; @robles2001]. No toda individuación sería reflexiva, ya que muchos individuos podrían experimentarla de forma delegativa, como una imposición [@silvapalacios2015]; no como un mundo de posibilidades, sino como lleno de incertidumbres. Los individuos, de tal modo, deben enfrentar las inseguridades ontológicas de la vida social a partir de sus propias habilidades bajo el imperativo de "arreglátelas como puedas" [@araujo2014; @robles2001]. Frente a esto, la valorización de la autonomía se vería desplazada por la búsqueda de seguridad como valor principal de esta forma de individuación [@silvapalacios2015]
+
+## El Individualismo chileno
+
+Se considera que no se cuentan con antecedentes empíricos suficientes como para establecer una hipótesis sobre los diversos perfiles de individualismo que pueden aparecer en la sociedad chilena. Sin embargo, teóricamente es posible inferir que el modelo predominante sería el del individualismo agéntico [@araujo2014]. En función a las dimensiones definidas, este se caracterizaría por: i) una alta legitimidad de la individualidad [@martuccelli2018], la que sin embargo podría ser menor en la esfera utilitaria como se podría extraer de la posición ambigua de los chilenas sobre acerca del oportunismo [@araujo2014] y el consumo [@araujo2012]; ii) Altos niveles de interdependencia relacional y grupal, dado el carácter relacional del individualismo chileno [@araujo2014], pero con niveles igualmente altos de concepciones independientes [@benavides2020; @kolstad2009]; iii) El desplazamiento de la autonomía como valor principal en favor de la búsqueda de seguridad, dado el énfasis en las destrezas personales de lo individuos como medio para superar las inseguridad ontológicas que deben enfrentar [@araujo2020a; @robles2001]
+
+
