--- a/index.Rmd
+++ b/index.Rmd
@@ -19,6 +19,23 @@ lot: True
 
 ---
 
+```{r, echo=F, include=F}
+library(tidyverse)
+library(knitr)
+library(kableExtra)
+library(psych)
+
+wvs <- read.csv("ipo/input/Datos/wvs.csv", header = T, sep = ";")
+
+df <- wvs %>% select(c(D_INTERVIEW, H_SETTLEMENT, H_URBRURAL, Q1, Q2, Q8, Q11, Q14,
+                       Q27, Q109, Q150, Q178, Q177, Q182, Q185, Q186,
+                       Q235, Q236, Q240, Q246, Q247, Q249, Q255,
+                       Q256, Q257, Q260, Q262, Q275R, Q287, Q289)) %>%
+   mutate(across(everything(),~ifelse(.<0, NA, .)))
+
+```
+
+
 # Prefacio {-}
 
 *"A toast, Jedebiah, to love on my terms. Those are the only terms anybody ever knows -- his own"* (Orson Welles, 1941)
