--- a/docs/tesis.tex
+++ b/docs/tesis.tex
@@ -274,7 +274,7 @@ Bajo esta definición, Chile se ha tendido a tomar como un contraejemplo, destac
 
 \begin{table}
 
-\caption{\label{tab:unnamed-chunk-2}Comparación variantes democracia}
+\caption{\label{tab:unnamed-chunk-3}Comparación variantes democracia}
 \centering
 \begin{tabu} to \linewidth {>{\centering}X>{\centering}X>{\centering}X}
 \toprule
@@ -351,54 +351,223 @@ Es este individuo quien se encuentra en el centro de un modelo de representació
 
 Las divergencias a este modelo observado en otras regiones del mundo, ha llevado normalmente a la negación de la existencia de individuos, individualización e individualismo en éstas \footnote{Y también, como así precisa Martuccelli, a las mujeres, las diversidades sexuales o las personas con discapacidad.}. Como se menciono anteriormente, se esconde aquí un aspecto normativo que asocia al individualismo y al individuo soberano con el orden social moderno (occidental), y con la tradición a todas sus desviaciones \citep{martuccelli2018}.
 
-Abordar el fenómeno del individualismo desde la teoría de la individualización presenta la ventaja de que permite desembarazarse de esta conceptualización unívoca de individuo, así como de la ambigüedad y multiplicidad con que se define el colectivismo. Para ello, se propone una definición que permita conceptualizar el fenómeno para la sociedad chilena. De tal modo, se entenderá como individualismo a los modelos de representación de la vida social que definen el rol del individuo en la sociedad en función a 3 ejes: a) La legitimidad de la acción individual; b) Las (auto)concepciones del individuo; c) los valores e imperativos estructuralmente producidos en los procesos de individuación.
+Abordar el fenómeno del individualismo desde la teoría de la individualización presenta la ventaja de que permite desembarazarse de esta conceptualización unívoca de individuo, así como de la ambigüedad y multiplicidad con que se define el colectivismo. Para ello, se propone una definición que permita conceptualizar el fenómeno para la sociedad chilena.
 
-El modelo del individualismo institucional es uno pero, aunque muchas veces se entiende de esa forma, no es el único.
-- Martuccelli menciona varios
-- Dentro de una misma sociedad pueden haber modelos difractarios:
-- Por ejemplo, diferencias en el individualismo en Estados Unidos entre negros y blancos.
-- El estudio de Mendez et al sobre el individualismo-colectivismo.
-- Pensar en el problema del familiarismo: Más que pensar si el familiarismo es una caracteristica del individualismo o del colectivismo, pensar que hay individualismos más familiaristas que otros. O, más bien, que definen de forma diversa la relación del individuo con sus familias.
-- Bajo este marco analítico, el colectivismo sería una a las modalidades de individualismo, en que la acción individual puede estar menos legitimada y los individuos suelen construyen su identidad al menos parcialmente en torno a la pertenencia a una colectividad. ¿Por qué esto es individualismo? Porque las colectivos son grupos de libre elección conformadas por individuos que buscan objetivos individuales a través de la acción colectiva \citep{arribas1999}. Bauman se refiere a esto a propósito de la individualización en las sociedades industriales que se dio de manera desigual entre clases que ``diferían en la gama de identidades disponibles y en la facilidad de elegir entre ellas. Las persoans con menos recursos, y por tanto con menos elección, tenía que compensar esta carencia individual con la fuerza de los números, es decir, cerrando fiales y participando en acciones colectivas. Como ha dicho Claus Offe, la acción colectiva y orientada a la clase llegó a los que estaban en la parte baja de la escalas social de manera tan \textless{}\textgreater{} y \textless{}\textgreater{} como llegaba a sus jefes y empresarios la búsqueda individual de las metas vitales'' \citep[p.~23]{bauman2003}
+Se entenderá como individualismo a los modelos de representación de la vida social que definen el rol del individuo en la sociedad. Bajo tales modelos, los individuos deben hacerse cargo de sus propias vidas en condiciones diversas de legitimidad de la acción individual, distintas representaciones culturales y autoconcepciones del individuo, y diferentes valores e imperativos estructuralmente producidos.
 
-\begin{itemize}
-\tightlist
-\item
-  PONER POR AHÍ: Aunque se manifiesta nivel individual, creo que sería incorrecto pensar que el individualismo es \emph{simplemente} un rasgo de la personalidad. Es un fenómeno estructural y sociohistórico, ligado a procesos de individuación que son ``destino, no una elección'' \citep[p.~23]{bauman2003}. A nivel personal se podría entender más bien como ``una explicación que las personas se dan a sí mismas, generalmente \emph{a posteriori}, para legitimar su comportamiento y el de los demás'' \citep[p.~12]{arribas1999}
-\item
-  Sin embargo, divergencias a este modelo son posibles de observar en:
+Bajo este marco analítico, el colectivismo podría entenderse como un conjunto de modalidades de individualismo propias de sociedades en que la acción individual puede estar menos legitimada o en que los individuos construyen su identidad en torno a la pertenencia a una colectividad. En ningún, del tal modo, sería incompatible con la idea de individualismo, pues estas colectividades son grupos de libre elección conformadas por individuos que persiguen objetivos individuales a través de la acción colectiva \citep{arribas1999, moemeka1998}. Zygmunt Bauman teoriza en este sentido, argumentando que los movimientos de trabajadores durante los siglos XIX y XX son resultado de procesos de individualización desiguales en esas sociedades:
 
-  \begin{itemize}
-  \tightlist
-  \item
-    La baja legitimidad de la individualidad propia del individualismo comunitario en África, así como la ambigüedad respecto al individualismo en Chile.
-  \item
-    Las concepciones de individuo inseperables de sus relaciones sociales, ya sea bajo un signo ontológico, como en las sociedades asiáticas, o utilitaria (como se ha observado en Chile con el híper-actor relacional)
-  \item
-    Los procesos de individuación en que los individuos no se constituyen explícitamente por mandatos institucionales sino por las respuestas individualizadas frente a los desafíos de la vida social, como sería el caso del individualismo agéntico en América Latina.
-  \end{itemize}
-\end{itemize}
+\begin{quote}
+Las personas con menos recursos, y por tanto con menos elección, tenían que compensar esta carencia individual con la fuerza de los números, es decir, cerrando fiales y participando en acciones colectivas. Como ha dicho Claus Offe, la acción colectiva y orientada a la clase llegó a los que estaban en la parte baja de la escala social de manera tan \emph{natural} y \emph{obvia} como llegaba a sus jefes y empresarios la búsqueda individual de las metas vitales'' \citep[p.~23]{bauman2003}.
+\end{quote}
 
-\hypertarget{agencia-y-creencias-legitimidad-de-la-individualidad}{%
-\subsubsection{Agencia y Creencias: Legitimidad de la Individualidad}\label{agencia-y-creencias-legitimidad-de-la-individualidad}}
+Ya en la argumentación de Bauman se puede divisar un punto clave en este marco analítico: El individualismo institucional es solo una modalidad entre varias, con divergencias y difracciones. El propio Martuccelli \citeyearpar{martuccelli2018} esquematiza una descripción de diversas variantes de individualismo que serían propias de las sociedades africanas (el individualismo comunitario), asiáticas (el individualismo ontorrelacional) y latinoamericanas (el individualismo agéntico). Pero, más interesante aún es que permite aprehender las difracciones dentro de una misma sociedad, y que esto es así incluso en las sociedades industriales en que emergió el modelo del individualismo institucional: El individualismo de los burgueses no era el mismo que el individualismo de los obreros.
 
-\hypertarget{identidad-autoconcepciones-del-individuo}{%
-\subsubsection{Identidad: (Auto)concepciones del individuo}\label{identidad-autoconcepciones-del-individuo}}
+Las diferencias raciales en las escalas de individualismo-colectivismo en Estados Unidos \citep{oyserman2002, komarraju2008} entregan evidencia empírica a esta forma de entender el constructo: Mientras entre europeos-estadounidenses no existe relación significativa entre individualismo y colectivismo, la asociación si es observable entre afroamericanos \citep{komarraju2008}. Se debe recordar, además, que ya en los años 80, en su clásico \emph{Habits of the Hearts}, Robert Bellah y su equipo describían dos tradiciones de individualismo en los Estados Unidos. También en Chile, mediante un análisis de conglomerados a la escala de Triandis (que distingue entre individualismo-colectivismo vertical y horizontal), se lograron identificar 5 grupos (colectivistas independientes, colectivistas puros, colectivistas idiocéntricos, individualistas alocéntricos y renegados) \citep{rojas2008}. Pensar en distintas modalidades individualismo también permite dar una salida al problema del familiarismo identificado por Oyserman y colegas \citeyearpar{oyserman2002} \footnote{La misma lógica puede aplicar al problema de la jerarquía y la competencia también identificada en ese estudio \citep{oyserman2002}.}: No se trata de si el familiarismo es una característica propia del individualismo o del colectivismo, sino que hay individualismos que definen de forma diversa la relación del individuo con sus familias.
 
-\hypertarget{valores-imperativos-y-formas-de-individuaciuxf3n}{%
-\subsubsection{Valores: Imperativos y formas de individuación}\label{valores-imperativos-y-formas-de-individuaciuxf3n}}
+En los párrafos que siguen, se dará -- brevemente -- algunas pequeñas precisiones sobre las dimensiones que se han identificado como componentes del fenómeno del individualismo:
 
-\hypertarget{metodologuxeda}{%
-\chapter{Metodología}\label{metodologuxeda}}
+\hypertarget{legitimidad-de-la-individualidad}{%
+\subsubsection{Legitimidad de la Individualidad}\label{legitimidad-de-la-individualidad}}
+
+Está dimensión se refiere a las creencias sobre la agencia de los individuos en el mundo social \citep{brewer2007}, así como la valoración de la individualidad. Por individualidad aquí se entiende al ``grado de diferenciación o de singularización reconocido o legítimamente alcanzado por un individuo dentro de un colectivo'' \citep[p.~10]{martuccelli2018}.
+
+Bajo el modelo del individualismo institucional, la individualidad deja de ser una anomalía para pasar a ostentar altos niveles de legitimidad \citep{martuccelli2018}. Sin embargo, esto se vería tensionado, por ejemplo, por la acentuación de conductas individualizadas sin ruptura de lazos comunitarios en sociedad africanas -- Modelo que Martuccelli \citeyearpar{martuccelli2018} denomina como indivudalismo comunitario. Más cercano a la realidad nacional, Araujo y Martuccelli constantan que la individualidad ha sido históricamente visto con sospecha en sociedades latinoamericanas \citep{araujo2020a}.
+
+Ahora bien, se debe resaltar que el individualismo ha sido institucionalizado principalmente en 3 esferas: la económica, la política y la afectiva \citep{cortois2018, martuccelli2018}. Esto se refleja en la existencia de 3 guiones para el individualismo institucional; en la esfera económica, un individualismo utilitario; en la política, un individualismo moral; y en la afectiva, un individualismo expresivo \citep{cortois2018}. Es importante hacer esta distinción, ya que en una misma sociedad pueden encontrtarse grupos e individuos que legitimen el individualismo en algunas esferas pero no en otras. Por ejemplo, en América del Norte se ha observado que grupos conservadores apoyan la determinación individual en la economía y en la elección de escuela, pero no en el derecho al aborto o a la eutanasia \citep{kemmelmeier2003}.
+
+El individualismo utilitario es aquel que entiende al individuo como propietario de su vid y sus habilidades, las que son susceptibles a ser intercambiadas en el libre mercado. La acción se entiende aquí como estratégica, es decir, como medios para conseguir fines individuales. El otro, de tal modo, no tiene un valor intrínseco, sino como un medio parat tales fines \citep{cortois2018}. En Chile, este tipo de individualismo podría asociarse a la instauración del neoliberalismo y la emergencia de un \emph{homo neoliberalis}, pincipalmente mediante el acceso al consumo \citep{araujo2012, araujo2020a}. Su legitimidad, con todo, está lejos de ser univoca, como se puede observar en la relación ambigua de los chilenos frente al oportunismo \citep{araujo2014} y frente al consumismo \citep{araujo2012}.
+
+El individualismo moral, en cambio, enfatiza la obligación moral de tratar al otro como un fin en sí mismo. La institucionalización de esta idea se puede observar en la declaraciones de derechos humanos, civiles y sociales, que reconocen a los individuos como iguales y autónomos \citep{cortois2018}. En América Latina, este tipo de individualismo ha se puede observar en la valorización de los derechos humanos tras las dictaduras del siglo XX \citep{araujo2020a}. En Chile, además, se podría observar en las aspiraciones por la democratización y horizontalización de lazo social, así como en las demandas por dignidad \citep{araujo2012}.
+
+Si cada una de estas variantes introducidas se puede relacionar con las dos vertientes de la \emph{doble revolución} descrita por Eric Hobsbawm, Eva Illouz \citeyearpar{illouz2020} introduce una tercera que aconteció en el plano emocional y en la esfera privada. Se trata de un cambio cultural del que emerge el individualismo expresivo, en el que la acción social se entiende como un medio para la autoexpresión auténtica del yo \citep{cortois2018}. Opera, así, en el ámbito del amor, la sexualidad, la identidad, las intimidad y la familia. Se distingue del individualismo utilitario en que, pese a que ambos están dirigidos hacia el propio individuo, el individualismo expresivo carece del carácter instrumental y estratégico del utilitarismo. Aunque en ese sentido podría acercarse al individualismo moral, la diferencia fundamental es que mientras este pone énfasis en la igualdad entre individuos (``todos los humanos nacen libres e iguales''), el expresivo le da relieve a la diferencia (particularmente, en la autenticidad y unicidad).
+
+\hypertarget{autoconcepciones-del-individuo}{%
+\subsubsection{(Auto)concepciones del individuo}\label{autoconcepciones-del-individuo}}
+
+Esta dimensión aborda las diversas concepciones en torno a la que se pueden definir a las que se pueden definir las identidades de los individuos, ya sea como uno prexistente a sus relaciones sociales -- como ocurre bajo el modelo del individualismo institucional --, o bien como parte de sus relaciones sociales o grupos a los que pertenece \citep{brewer2007, martuccelli2018}.
+
+Si bien la concepción de un individuo independiente se ha considerado como propio de las culturas individualistas \citep{benavides2020, cross2011}, tal idea ha sido problematizada teóricamente \citep{voronov2002} y empíricamente \citep{benavides2020, kolstad2009}. Esto, junto a a la persistencia de los llamados valores asiáticos en esas sociedad, que conceptualizan al individuo como inseperable de sus lazos sociales \citep{zhai2022}, y la conceptualización de un híper-actor relacional en la sociedad chilena \citep{araujo2020}, sugiera la posibilidad de individualismos que difieren de las concepciones del individuo atomizado.
+
+Así, además de las autoconcepciones independientes se podrían identificar, por un lado, concepciones relaciones y concepciones colectivas \citep{brewer2007}. En las primeras, la identidad del individuo se define por sus relaciones cercanas, tales como la familia o los amigos. En las segundas, en tanto, es la identificaciones con grupos sociales más abstractos -- esto es, grupos nacionales, regionales, étnicos o religiosos -- lo que define a la identidad individual \citep{brewer2007}
+
+\hypertarget{valores-e-imperativos}{%
+\subsubsection{Valores e Imperativos}\label{valores-e-imperativos}}
+
+Esta dimensión se refiere a la importancia relativa que se le otorga en una sociedad a diversos valores e imperativos individuales y colectivos \citep{brewer2007}, los cuales son producidos por procesos sociohistóricos de individuación \citep{martuccelli2018}. Bajo el individualismo institucional, el principal valor para el individuo es la autonomía \citep{martuccelli2010}. Esto se realiza mediante un entramado institucional \citep{martuccelli2018} que ``formula amablemente a cada uno que se constituya a sí mismo en individuo, que planifique su vida, diseñe y obre y asuma la responsabilidad en caso de fracaso'' \citep[p.~59]{robles2001}. Es, pues, una individuación reflexiva bajo la que los individuos se constituyen bajo el imperativo de ejercer control sobre sus destinos y tomar decisiones de manera autónoma \citep{silvapalacios2015}, de ahí que su imperativo principal sea ``vive tu vida como quieras'' \citep{robles2001}
+
+Sin embargo, también se han planteado visiones críticas a esta concepción, particularmente desde América Latina \citep{araujo2012, robles2001}. No toda individuación sería reflexiva, ya que muchos individuos podrían experimentarla de forma delegativa, como una imposición \citep{silvapalacios2015}; no como un mundo de posibilidades, sino como lleno de incertidumbres. Los individuos, de tal modo, deben enfrentar las inseguridades ontológicas de la vida social a partir de sus propias habilidades bajo el imperativo de ``arreglátelas como puedas'' \citep{araujo2014, robles2001}. Frente a esto, la valorización de la autonomía se vería desplazada por la búsqueda de seguridad como valor principal de esta forma de individuación \citep{silvapalacios2015}
+
+\hypertarget{el-individualismo-chileno}{%
+\section{El Individualismo chileno}\label{el-individualismo-chileno}}
+
+Se considera que no se cuentan con antecedentes empíricos suficientes como para establecer una hipótesis sobre los diversos perfiles de individualismo que pueden aparecer en la sociedad chilena. Sin embargo, teóricamente es posible inferir que el modelo predominante sería el del individualismo agéntico \citep{araujo2014}. En función a las dimensiones definidas, este se caracterizaría por: i) una alta legitimidad de la individualidad \citep{martuccelli2018}, la que sin embargo podría ser menor en la esfera utilitaria como se podría extraer de la posición ambigua de los chilenas sobre acerca del oportunismo \citep{araujo2014} y el consumo \citep{araujo2012}; ii) Altos niveles de interdependencia relacional y grupal, dado el carácter relacional del individualismo chileno \citep{araujo2014}, pero con niveles igualmente altos de concepciones independientes \citep{benavides2020, kolstad2009}; iii) El desplazamiento de la autonomía como valor principal en favor de la búsqueda de seguridad, dado el énfasis en las destrezas personales de lo individuos como medio para superar las inseguridad ontológicas que deben enfrentar \citep{araujo2020a, robles2001}
+
+\hypertarget{estrategia-metodoluxf3gica}{%
+\chapter{Estrategia Metodológica}\label{estrategia-metodoluxf3gica}}
 
 \hypertarget{datos}{%
 \section{Datos}\label{datos}}
 
-\hypertarget{variables}{%
-\section{Variables}\label{variables}}
+\hypertarget{muestra}{%
+\subsection{Muestra}\label{muestra}}
 
-\hypertarget{muxe9todos}{%
-\section{Métodos}\label{muxe9todos}}
+Se utilizarán datos de la muestra chilena de la séptima ola de la Encuesta Mundial de Valores, la más reciente a la fecha. El trabajo de campo se realizó entre enero y febrero del 2018, con una muestra de 1.000 personas mayores de 18 años. Estas fueron seleccionadas mediante un muestreo multietápico de 3 niveles y cuenta con representación nacional, así como de zonas urbanas y rurales \citep{haerpfer2020}. En la tabla 3.1 se resumen algunas de las variables de caracterización principales de la base de datos.
+
+\begin{table}
+
+\caption{\label{tab:unnamed-chunk-5}Resumen muestra}
+\centering
+\begin{tabu} to \linewidth {>{\centering}X>{\centering}X>{\centering}X}
+\toprule
+\multicolumn{1}{c}{Indicador} & \multicolumn{1}{c}{n} & \multicolumn{1}{c}{Porcentaje}\\
+\midrule
+N & 1000 & 100.0\\
+\addlinespace[0.3em]
+\multicolumn{3}{l}{\textbf{Sexo}}\\
+\hspace{1em}Hombre & 474 & 47.4\\
+\hspace{1em}Mujer & 526 & 52.6\\
+\addlinespace[0.3em]
+\multicolumn{3}{l}{\textbf{Edad}}\\
+\hspace{1em}18 a 29 años & 77 & 16.2\\
+\hspace{1em}30 a 49 años & 213 & 44.9\\
+\hspace{1em}Más de 50 años & 184 & 38.8\\
+\addlinespace[0.3em]
+\multicolumn{3}{l}{\textbf{Zona}}\\
+\hspace{1em}Urbano & 864 & 86.4\\
+\hspace{1em}Rural & 136 & 13.6\\
+\addlinespace[0.3em]
+\multicolumn{3}{l}{\textbf{Nivel Educacional}}\\
+\hspace{1em}Básico & 36 & 7.6\\
+\hspace{1em}Medio & 263 & 55.5\\
+\hspace{1em}Superior & 175 & 36.9\\
+\addlinespace[0.3em]
+\multicolumn{3}{l}{\textbf{Religión}}\\
+\hspace{1em}Católica & 294 & 62.0\\
+\hspace{1em}Evangélica & 25 & 5.3\\
+\hspace{1em}Ninguna & 125 & 26.4\\
+\hspace{1em}Otra & 30 & 6.3\\
+\bottomrule
+\multicolumn{3}{l}{\rule{0pt}{1em}\textit{Nota.} Tabla basada en Encuesta Mundial de Valores 2018 (Haerpfer et al., 2020)}\\
+\end{tabu}
+\end{table}
+
+\hypertarget{variable-dependiente}{%
+\subsection{Variable dependiente}\label{variable-dependiente}}
+
+La variable dependiente es apoyo a la democracia delegativa, la que se medirá a través de un índice sumativo de dos ítems: i) Valoración de tener un líder fuerte que no se preocupe por el congreso y las elecciones; ii) Valoración de tener expertos, no un gobierno, tomando decisiones de acuerdo a lo que ellos cree que es mejor para el país. La primera pregunta ha sido utilizada con anterioridad para medir el apoyo a la democracia delegativa en Asia \citep{kang2018a}, mientras que el segundo se integra considerando la impronta tecnocrática de la democracia delegativa \citep{odonnell1994}.
+
+La consistencia interna de este indicador, medio a través del \(\alpha\) de Cronbach es de 0,65. Si bien esto está por debajo de la convención que considera valores sobre 0,7 como aceptables, no debería tomarse como una limitación para su uso cuando hay razones teóricas de peso que permitan argumentar que ambos ítems miden un único constructo \citep{schmitt1996}.
+
+\hypertarget{variable-independiente}{%
+\subsection{Variable independiente}\label{variable-independiente}}
+
+La variable independiente para esta investigación es el individualismo, que aquí se define como una variable latente y categórica que puede medirse a través de un conjunto de indicadores operacionalizados a partir de las dimensiones y subdimensiones definidas en el marco teórico. En la table 3.1. se resumen los indicadores seleccionados.
+
+\begin{table}
+
+\caption{\label{tab:unnamed-chunk-7}Resumen indicadores}
+\centering
+\begin{tabular}[t]{>{\centering\arraybackslash}p{5cm}>{\raggedright\arraybackslash}p{10cm}}
+\toprule
+\multicolumn{1}{c}{Dimensión} & \multicolumn{1}{c}{Indicadores}\\
+\midrule
+\addlinespace[0.3em]
+\multicolumn{2}{l}{\textbf{Legitimidad de la individualidad}}\\
+ & Valoración de la competencia\\
+
+ & Justificación de evasión transporte público\\
+
+\multirow{-3}{5cm}{\centering\arraybackslash \hspace{1em}Legitimidad del individualismo utilitario} & Justificación de aceptar ayudas sociales sin necesidad\\
+\cmidrule{1-2}
+ & Importancia de la igualdad de ingresos\\
+
+ & Importancia de la igualdad de género\\
+
+\multirow{-3}{5cm}{\centering\arraybackslash \hspace{1em}Legitimidad del individualismo moral} & Importancia del respeto a los derechos civiles\\
+\cmidrule{1-2}
+ & Justificación de la homosexualidad\\
+
+ & Justificación del divorcio\\
+
+\multirow{-3}{5cm}{\centering\arraybackslash \hspace{1em}Legitimidad del individualismo expresivo} & Justificación del sexo premarital\\
+\cmidrule{1-2}
+\addlinespace[0.3em]
+\multicolumn{2}{l}{\textbf{Concepciones del Individuo}}\\
+ & Importancia de la independencia\\
+
+ & Importancia de la imaginación\\
+
+\multirow{-3}{5cm}{\centering\arraybackslash \hspace{1em}Concepción Independiente} & Importancia de la perseverancia\\
+\cmidrule{1-2}
+ & Importancia de la familia\\
+
+ & Importancia de los amigos\\
+
+\multirow{-3}{5cm}{\centering\arraybackslash \hspace{1em}Concepción Relacional} & Importancia de hacer a los padres orgullosos\\
+\cmidrule{1-2}
+ & Cercanía con pueblo o ciudad\\
+
+ & Cercanía con la región\\
+
+\multirow{-3}{5cm}{\centering\arraybackslash \hspace{1em}Concepción Colectiva} & Cercanía con Chile\\
+\cmidrule{1-2}
+\addlinespace[0.3em]
+\multicolumn{2}{l}{\textbf{Valores e imperativos}}\\
+\hspace{1em}Valor principal & Considera más importante la seguridad o la libertad\\
+\bottomrule
+\end{tabular}
+\end{table}
+
+Le legitimidad de la individualidad se medirá a través de 3 subdimensiones: Legitimidad del individualismo utilitario, legitimidad del individualismo moral y legitimidad del individualismo expresivo.
+
+\begin{itemize}
+\tightlist
+\item
+  Para la legitimidad del individualismo utilitario se tomarán indicadores que apuntan a medir la legitimidad de acciones estratégicas que permitan obtener beneficios personales, incluso si éstas están en contra de las normas.
+\item
+  Para la legitimidad del individualismo moral se tomarán indicadores sobre la importancia de la igualdad de ingresos, la igualdad de género y los derechos civiles en una democracia. Con éstos, se pretende recoger la importancia que ha adquirido la igualdad de trato y los derechos humanos en la sociedad chilena \citep{araujo2012, araujo2020a}. Sin duda, se podría argumentar que tomar estos indicadores podría generar problemas de endogeneidad con la variables dependiente, que también se refiere a aspectos sobre la democracia. Sin embargo, se debe considerar que la conceptualización aquí trabajada no asume que una relación intrínseca entre liberalismo-democracia e individualismo. Es más, la apuesta es precisamente que que hay modelos de individualismo en que tal relación no existe o es contradictoria.
+\item
+  Para legitimidad del individualismo expresivo se tomarán indicadores sobre la legitimidad de prácticas individualizadas en las esferas de la sexualidad y del amor.
+\end{itemize}
+
+La dimensión de concepciones del individuo se construirá a partir de las 3 subdimensiones definidas por Brewer \citeyearpar{brewer2007}: concepción independiente, concepción relacional, y concepción colectiva.
+
+\begin{itemize}
+\tightlist
+\item
+  Para autoncepción independiente se mide a través de ítems sobre la importancia de transmitir a futuras generaciones cualidades como la independencia, la imaginación y la perseverancia.
+\item
+  Para la autoncepción relacional se tomarán ítems sobre la importan para las personas de sus relaciones más cercanas, particularmente la familia, los padres y los amigos.
+\item
+  Para la autoconcepción colectiva se tomarán ítems sobre la identificación de las personas con su país, su región y su comuna.
+\end{itemize}
+
+Por último, la dimensión de valores e imperativos se medirá a partir de un indicador único bajo el supuesto de que personas que le dan una mayor importancia relativa a la libertad por sobre la seguridad se corresponden a una individuación reflexiva (y que la autonomía es su valor principal), mientras que en el caso contrario se relacionan más bien con una individuación delegativa (y que la búsqueda por seguridad desplaza a la autonomía como valor principal).
+
+\hypertarget{variables-de-control}{%
+\subsection{Variables de control}\label{variables-de-control}}
+
+Se sumarán variables de control principalmente a características sociodemográficas de las que se han observado se relacionan con el apoyo a la democracia, tales como autoidentificación política en el espectro izquierda-derecha, sexo, edad, nivel educacional e identificación religiosa \citep{navia2019, gidron2020, eskelinen2020}
+
+\hypertarget{tuxe9cnica-de-anuxe1lisis}{%
+\section{Técnica de análisis}\label{tuxe9cnica-de-anuxe1lisis}}
+
+\hypertarget{anuxe1lisis-de-clases-latentes}{%
+\subsection{Análisis de clases latentes}\label{anuxe1lisis-de-clases-latentes}}
+
+Para la construcción de los perfiles de individualismo se utilizará la técnica de análisis de clases latentes. Este es un modelo de variables latentes para cunado estas son categóricas en lugar de continuas, lo que permite identificar diferencias cualitativas y principios de organización dentro de la población \citep{collins2010}.
+
+El uso de métodos cuantitativos en una investigación con una perspectiva teórica como la que aquí se ha planteado -- la individualización y la sociología del individuo -- puede resultar problemático, pues este es un campo donde proliferan principalmente lo estudios cualitativos. Frente a esto, y reconociendo la profundidad que tales aproximaciones le han dado a la investigación del individuo en Chile, el análisis de clases latentes puede ser una herramienta importante para complementar el conocimientos producido sobre el individualismo en Chile.
+
+Mientras las técnicas cuantitativas utilizadas por casi la totalidad de los estudios desde la psicología cultural se concentran en encontrar relaciones entre el individualismo (y el colectivismo) con otras variables, el análisis de clases latentes ofrece una \emph{aproximación orientada a la persona} \citep{collins2010}. Esta forma de abordar el análisis estadístico se diferencia en que no busca establecer relación entre variables, sino que se propone dar con resultados que sean interpretables a nivel del individuo y que sean informativos sobre los patrones generales en que éstos se comportan \citep{bergman2015}. El análisis de clases latentes, de tal modo, ofrece la oportunidad de realizar una sociología a nivel del individuo, a partir de quienes -- a través de sus percepciones, creencias y experiencias -- sería posible mapear las difracciones de los procesos estructurales de individuación en Chile.
+
+Es importante tener en cuenta que tanto las variables latentes como las observadas en este modelo son categóricas. Por lo tanto, se deben tomar decisiones sobre la redocidicación de los indicadores propuestos. En general, para simplificar el análisis y evitar la dispersión (\emph{sparseness}) de los datos, es recomendable dictomizar las variables respecto a la media.
+
+Una forma de entender esta decisión es pensar que el análisis de clases latentes organiza la información en una tabla de contigencia con \(W\) celdas. En general, se busca que la relación entre el tamaño muestra y el número de celdas (\(N/W\)) sea lo más alto posible \citep{collins2010}. Del mismo modo, al igual que al analizar una tabla de contigencia, se quiere evitar que haya celdas vacías o con pocos casos. Al dicotomizar respecto a la media, se lograrían ambos objetivos.
+
+\hypertarget{modelo-de-regresiuxf3n-lineal}{%
+\subsection{Modelo de regresión lineal}\label{modelo-de-regresiuxf3n-lineal}}
 
 \hypertarget{anuxe1lisis}{%
 \chapter{Análisis}\label{anuxe1lisis}}
@@ -411,6 +580,9 @@ El modelo del individualismo institucional es uno pero, aunque muchas veces se e
 
 \hypertarget{conclusiones}{%
 \chapter{Conclusiones}\label{conclusiones}}
+
+\hypertarget{bibliografuxeda}{%
+\chapter{Bibliografía}\label{bibliografuxeda}}
 
 % %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % %%% Bibliography                              %%%
